--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,6 +24,7 @@ pipeline {
                     }catch (Exception e) {
                         mail bcc: '', body: 'git cloned failed to download', cc: '', from: '', replyTo: '', subject: 'gitclone failed', to: 'michaeltebid1@gmail.com'
                         Error('maven built failed')  
+                          echo "new changes have been made on this script"
                     }
                 }
             }
